--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "4.17.2",
     "mysql": "2.18.1",
     "mysql2": "^3.6.5",
-    "nodemon": "2.0.15"
+    "nodemon": "2.0.15",
+    "sequelize": "6.13.0",
+    "sequelize-cli": "6.3.0"
   }
 }
